[metadata]
name = pythonic-dbm
version = 0.1.1
url = https://pydbm.hakancelik.dev/
author = Hakan Celik
author_email = hakancelikdev@gmail.com
description = pydbm is an ORM for dbm.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://pydbm.hakancelik.dev/
    Issues = https://github.com/hakancelikdev/pydbm/issues/
    Changelog = https://pydbm.hakancelik.dev/changelog

[options]
python_requires = >=3.10
include_package_data = true
zip_safe = true
packages =
    pydbm
    pydbm.models
    pydbm.models.fields
    pydbm.models.validators
package_dir =
    =src
install_requires =

[options.extras_require]
tests =
    pytest==6.2.4
    pytest-cov==2.12.1
docs =
    mkdocs==1.3.0
    mkdocs-material==8.3.6
    mkdocs-markdownextradata-plugin==0.2.5
    mkdocs-minify-plugin==0.5.0
    mkdocs-git-revision-date-localized-plugin==1.0.1

[options.package_data]
* =
  py.typed
