[metadata]
name = odbm
version = 0.1.0
url = https://odbm.hakancelik.dev/
author = Hakan Celik
author_email = hakancelikdev@gmail.com
description = O-dbm is an ORM for dbm.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://odbm.hakancelik.dev/
    Issues = https://github.com/hakancelikdev/odbm/issues/
    Changelog = https://odbm.hakancelik.dev/changelog

[options]
python_requires = >=3.8
include_package_data = true
zip_safe = true
packages =
    odbm
    odbm.models
    odbm.models.fields
    odbm.models.validators
package_dir =
    =src
install_requires =

[options.extras_require]
tests =
    pytest==6.2.4
    pytest-cov==2.12.1
docs =
    mkdocs==1.3.0
    mkdocs-material==8.3.6
    mkdocs-markdownextradata-plugin==0.2.5
    mkdocs-minify-plugin==0.5.0
    mkdocs-git-revision-date-localized-plugin==1.0.1

[options.package_data]
* =
  py.typed
