[metadata]
name = pythonic-dbm
version = 0.3.0
url = https://pydbm.hakancelik.dev/
author = Hakan Celik
author_email = hakancelikdev@gmail.com
description = Pydbm is a more pythonic way to use dbm.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://pydbm.hakancelik.dev/
    Issues = https://github.com/hakancelikdev/pydbm/issues/
    Changelog = https://pydbm.hakancelik.dev/changelog

[options]
python_requires = >=3.8
include_package_data = true
zip_safe = true
packages =
    pydbm
    pydbm.models
    pydbm.models.fields
    pydbm.models.validators
package_dir =
    =src
install_requires =

[options.extras_require]
tests =
    pytest==7.2.0
    pytest-cov==4.0.0
docs =
    mkdocs==1.4.2
    mkdocs-material==8.5.11
    mkdocs-markdownextradata-plugin==0.2.5
    mkdocs-minify-plugin==0.6.2
    mkdocs-git-revision-date-localized-plugin==1.1.0
    mike==1.1.2

[options.package_data]
* =
  py.typed
